--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@badlogic/pi",
-  "version": "0.1.1",
+  "name": "@mariozechner/pi",
+  "version": "0.1.2",
   "description": "CLI tool for managing vLLM deployments on GPU pods from Prime Intellect, Vast.ai, etc.",
   "main": "pi",
   "bin": {
