--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-node_modules
+node_modules/
+dist/
+*.log
+.env
+.DS_Store
+*.tsbuildinfo
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.npm/
+coverage/
+.nyc_output/
+.pi_config/
