--- a/package.json
+++ b/package.json
@@ -1,42 +1,56 @@
 {
-  "name": "@mariozechner/pi",
-  "version": "0.2.4",
-  "description": "CLI tool for managing vLLM deployments on GPU pods from Prime Intellect, Vast.ai, etc.",
-  "main": "pi.js",
-  "bin": {
-    "pi": "pi.js"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "llm",
-    "vllm",
-    "gpu",
-    "prime-intellect",
-    "ai",
-    "ml",
-    "cli"
-  ],
-  "author": "Mario Zechner",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/badlogic/pi.git"
-  },
-  "bugs": {
-    "url": "https://github.com/badlogic/pi/issues"
-  },
-  "homepage": "https://github.com/badlogic/pi#readme",
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "preferGlobal": true,
-  "files": [
-    "pi.js",
-    "pod_setup.sh",
-    "vllm_manager.py",
-    "README.md",
-    "LICENSE"
-  ]
+	"name": "@mariozechner/pi",
+	"version": "0.3.0",
+	"description": "CLI tool for managing vLLM deployments on GPU pods",
+	"type": "module",
+	"main": "dist/index.js",
+	"bin": {
+		"pi": "dist/cli.js"
+	},
+	"scripts": {
+		"build": "tsc && cp src/models.json dist/",
+		"dev": "tsc --watch --preserveWatchOutput",
+		"clean": "rm -rf dist",
+		"prepublishOnly": "npm run clean && npm run build",
+		"check": "biome check --write . && tsc --noEmit",
+		"prepare": "husky"
+	},
+	"files": [
+		"dist/**/*",
+		"README.md",
+		"LICENSE"
+	],
+	"keywords": [
+		"llm",
+		"vllm",
+		"gpu",
+		"ai",
+		"cli"
+	],
+	"author": "Mario Zechner",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/badlogic/pi.git"
+	},
+	"bugs": {
+		"url": "https://github.com/badlogic/pi/issues"
+	},
+	"homepage": "https://github.com/badlogic/pi#readme",
+	"engines": {
+		"node": ">=18.0.0"
+	},
+	"preferGlobal": true,
+	"dependencies": {
+		"chalk": "^5.5.0",
+		"openai": "^5.12.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.1.3",
+		"@types/node": "^20.19.9",
+		"husky": "^9.1.7",
+		"typescript": "^5.9.2",
+    "tsx": "^4.20.3"
+	},
+	"types": "./dist/index.d.ts"
 }
