Rewrite prompt command with improved UX and tool support
- Complete rewrite of prompt.ts using OpenAI SDK directly
- Add beautiful colored output format with [thinking], [tool], [assistant], [user] labels
- Support for GPT-OSS models via responses API with reasoning display
- Add local tools: read_file, list_directory, run_command
- Implement multi-prompt queuing with '<exit>' command
- Add interactive mode with -i flag
- Proper conversation history management
- Tool output truncation (10 lines max) for readability
- Fix vLLM tool format compatibility for GPT-OSS models
- Update CLI to support multiple prompt arguments
- Add Vercel AI SDK dependencies (for future use)
- Clean up unused imports in models.ts

--- a/package.json
+++ b/package.json
@@ -42,15 +42,18 @@
 	},
 	"preferGlobal": true,
 	"dependencies": {
+		"@ai-sdk/openai": "^2.0.5",
+		"ai": "^5.0.8",
 		"chalk": "^5.5.0",
-		"openai": "^5.12.0"
+		"openai": "^5.12.1",
+		"zod": "^3.25.76"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.3",
 		"@types/node": "^20.19.9",
 		"husky": "^9.1.7",
-		"typescript": "^5.9.2",
-    "tsx": "^4.20.3"
+		"tsx": "^4.20.3",
+		"typescript": "^5.9.2"
 	},
 	"types": "./dist/index.d.ts"
 }
