--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
 		"ai": "^5.0.8",
 		"chalk": "^5.5.0",
 		"openai": "^5.12.1",
-		"zod": "^3.25.76"
+		"zod": "^3.25.76",
+    "glob": "^11.0.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.3",
