--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
 		"chalk": "^5.5.0",
 		"openai": "^5.12.1",
 		"zod": "^3.25.76",
-    "glob": "^11.0.3"
+		"@mariozechner/tui": "0.1.0",
+    	"glob": "^11.0.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.3",
