Refactor: Unified event-based architecture and standalone agent CLI
Major architectural improvements:
- Moved from dual logging (messages + events) to unified event-based system
- Agent now uses AgentEvent as single source of truth for UI and persistence
- Added setEvents() method to Agent for proper event-to-message reconstruction
- Handles both Chat Completions and Responses API formats correctly

New standalone agent CLI:
- agent.ts now exposes main() function for programmatic use
- Added pi-agent as separate command for general OpenAI API usage
- Supports all OpenAI-compatible APIs with sensible defaults
- Full session management and continuation support

Command changes:
- Renamed 'pi prompt' to 'pi agent' for consistency
- prompt.ts now directly calls agent's main() function (no child process)

Clean separation of concerns:
- Event-driven architecture for UI replay and persistence
- Agent handles its own message reconstruction logic
- SessionManager implements AgentEventReceiver interface
- Removed redundant getMessages/setMessages/clearMessages methods

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
 	"type": "module",
 	"main": "dist/index.js",
 	"bin": {
-		"pi": "dist/cli.js"
+		"pi": "dist/cli.js",
+		"pi-agent": "dist/agent/agent.js"
 	},
 	"scripts": {
-		"build": "tsc && cp src/models.json dist/",
+		"build": "tsc && cp src/models.json dist/ && chmod +x dist/agent/agent.js",
 		"dev": "tsc --watch --preserveWatchOutput",
 		"clean": "rm -rf dist",
 		"prepublishOnly": "npm run clean && npm run build",
