Refactor agent CLI and add JSON interactive mode
Major improvements to the agent CLI architecture:

1. Moved CLI logic from agent.ts to new cli.ts file
   - agent.ts now only contains the Agent class and API functions
   - cli.ts handles all argument parsing and mode selection

2. Simplified CLI interface:
   - Removed -i flag (interactive mode is automatic when no messages)
   - Changed -c to --continue for consistency
   - Multiple messages can be passed for sequential processing

3. Added JSON interactive mode for programmatic UIs:
   - Use --json flag with no messages for interactive JSON mode
   - Accepts JSON commands via stdin: {type: "message", content: "..."} or {type: "interrupt"}
   - Outputs all events as JSONL for easy parsing
   - Enables building custom UIs on top of the agent

4. Fixed reasoning_effort parameter issue with standard OpenAI models

This provides a cleaner separation of concerns and enables programmatic
integration while maintaining backward compatibility for CLI usage.

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
 	"main": "dist/index.js",
 	"bin": {
 		"pi": "dist/cli.js",
-		"pi-agent": "dist/agent/agent.js"
+		"pi-agent": "dist/agent/cli.js"
 	},
 	"scripts": {
-		"build": "tsc && cp src/models.json dist/ && chmod +x dist/agent/agent.js",
+		"build": "tsc && cp src/models.json dist/ && chmod +x dist/agent/cli.js",
 		"dev": "tsc --watch --preserveWatchOutput",
 		"clean": "rm -rf dist",
 		"prepublishOnly": "npm run clean && npm run build",
