Replace mri with custom typed argument parser
Created our own minimal, fully typed argument parser in args.ts that:
- Supports flag, boolean, int, float, string, and file types
- Provides TypeScript type inference for parsed arguments
- Handles short aliases (e.g., -h for --help)
- Collects positional arguments into _ array
- Resolves file paths (expanding ~ to home directory)
- Generates help text automatically from definitions
- Is much smaller and simpler than external dependencies

Also fixed @mariozechner/tui dependency to use local path instead of npm.

The custom parser gives us exactly what we need with full type safety
and no external dependencies for argument parsing.

--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
 	"preferGlobal": true,
 	"dependencies": {
 		"@ai-sdk/openai": "^2.0.5",
+		"@mariozechner/tui": "file:../tui",
 		"ai": "^5.0.8",
 		"chalk": "^5.5.0",
+		"glob": "^11.0.3",
 		"openai": "^5.12.1",
-		"zod": "^3.25.76",
-		"@mariozechner/tui": "0.1.0",
-    	"glob": "^11.0.3"
+		"zod": "^3.25.76"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.3",
